--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -42,8 +42,10 @@
 
 .code-editor {
   display: flex;
-  width: 60%;
+  flex-direction: column;
+  max-width: 60%;
   height: 100%;
+  flex-grow: 1;
   background-color: #20db49;
 }
 
