change in scss.

--- a/src/styles/codeQuality/analysisForm.scss
+++ b/src/styles/codeQuality/analysisForm.scss
@@ -4,8 +4,8 @@
   }
   
   .editor-container {
-    width: 550px;
-    height: 295px;
+    width: 80%;
+    height: 70%;
     padding: 8px 12px;
   }
   
