add buttons bar in part of codeEditor

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,6 +2,7 @@
   display: flex;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 
@@ -46,7 +47,7 @@
   max-width: 60%;
   height: 100%;
   flex-grow: 1;
-  background-color: #20db49;
+  background-color: #525452;
 }
 
 .instrument-helpers {
