fixed scss exception

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,5 @@
-@import 'App';
-@import 'index';
-@import 'codeEditor/codeForm';
-@import 'codeQuality/analysisForm';
-@import 'codeAi/aiCode';
+@use 'App';
+@use 'index';
+@use 'codeEditor/codeForm';
+@use 'codeQuality/analysisForm';
+@use 'codeAi/aiCode';
