fixed codeQuality style

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -53,6 +53,7 @@
 .instrument-helpers {
   display: flex;
   flex-direction: column;
+  max-width: 40%;
   height: 100%;
   flex-grow: 1;
   overflow: hidden;
