--- a/src/styles/codeQuality/analysisForm.scss
+++ b/src/styles/codeQuality/analysisForm.scss
@@ -25,7 +25,7 @@
   align-items: center; // Center align buttons
   padding: 20px; // Padding around the container
   background-color: #525452;
-  border-radius: 8px; // Rounded corners for the container
+  border-radius: 8px 0px 0px 8px;
   box-shadow: 0 4px 15px rgba(255, 216, 216, 0.2); // Subtle shadow effect
 }
 
