--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,6 +3,9 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
+  gap: 10px;
+  padding: 10px;
+  background-color: rgb(0, 0, 0);
 }
 
 
@@ -57,6 +60,7 @@
   height: 100%;
   flex-grow: 1;
   overflow: hidden;
+  gap: 10px;
 }
 
 .code-quality, .code-from-ai {
