--- a/src/styles/buttons/buttonStyle.scss
+++ b/src/styles/buttons/buttonStyle.scss
@@ -8,7 +8,7 @@
     font-size: 16px; // Font size
     cursor: pointer; // Change cursor to pointer
     margin: 5px 0; // Space between buttons
-    display: flex;;
+    width: 100%;
 
     transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s; // Smooth transition effects
 
