--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,9 @@
+:root{
+  --font-size-base: 16px;
+  --color-white: #ffffff;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -16,6 +22,8 @@ code {
 #root {
   width: 100vw;
   height: 100vh;
+  font-size: var(--font-size-base);
+  font-family: 'Roboto', sans-serif;
 
   * {
     box-sizing: border-box;
