--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,8 +3,8 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  gap: 10px;
-  padding: 10px;
+  gap: var(--main-padding);
+  padding: var(--main-padding);
   background-color: rgb(0, 0, 0);
 }
 
@@ -28,7 +28,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: var(--color-white);
 }
 
 .App-link {
@@ -60,7 +60,7 @@
   height: 100%;
   flex-grow: 1;
   overflow: hidden;
-  gap: 10px;
+  gap: var(--main-padding);
 }
 
 .code-quality, .code-from-ai {
