--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,9 @@
 :root{
   --main-padding: 10px;
   --font-size-base: 16px;
+  --font-size-small: 14px;
   --color-white: #ffffff;
+  --background-color-bottom: #525452; 
 }
 
 
