--- a/src/styles/codeAi/aiCode.scss
+++ b/src/styles/codeAi/aiCode.scss
@@ -8,7 +8,7 @@
     flex-direction: column; // Stack buttons vertically
     align-items: center; // Center align buttons
     padding: 20px; // Padding around the container
-    background: #525452;
+    background: var(--background-color-bottom);
     border-radius: 8px 0px 0px 8px; // Rounded corners for the container
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); // Subtle shadow effect
 }
