--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -50,7 +50,7 @@
   max-width: 60%;
   height: 100%;
   flex-grow: 1;
-  background-color: #525452;
+  background-color: var(--background-color-bottom);
 }
 
 .instrument-helpers {
