add adaptive style

--- a/src/styles/buttons/buttonStyle.scss
+++ b/src/styles/buttons/buttonStyle.scss
@@ -1,28 +1,25 @@
 
 .button {
-    background-color: #007acc; // Button background color
-    color: white; // Text color
-    border: none; // Remove default border
-    border-radius: 4px; // Rounded corners
-    padding: 10px 20px; // Padding inside buttons
-    font-size: 16px; // Font size
-    cursor: pointer; // Change cursor to pointer
-    margin: 5px 0; // Space between buttons
+    background-color: #007acc;
+    color: var(--color-white);
+    border: none;
+    border-radius: 0.4rem;
+    padding: 1rem 2rem;
+    cursor: pointer;
+    margin: 0.5rem 0;
     width: 100%;
 
-    transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s; // Smooth transition effects
+    transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s;
 
-    // Style for hover state
     &:hover {
-      background-color: #005a99; // Darker shade on hover
-      transform: scale(1.05); // Slightly enlarge button on hover
-      box-shadow: 0 4px 10px rgba(0, 90, 255, 0.5); // Shadow effect on hover
+      background-color: #005a99;
+      transform: scale(1.05);
+      box-shadow: 0 0.4rem 1rem rgba(0, 90, 255, 0.5);
     }
 
-    // Style for active state
     &:active {
-    transform: scale(0.95); // Slightly shrink button when clicked
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3); // Reduce shadow on click
+    transform: scale(0.95);
+    box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.3);
   }
 }
 
