--- a/src/styles/buttons/buttonStyle.scss
+++ b/src/styles/buttons/buttonStyle.scss
@@ -8,8 +8,10 @@
     cursor: pointer;
     margin: 0.5rem 0;
     width: 100%;
-
     transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     &:hover {
       background-color: #005a99;
