--- a/src/styles/codeQuality/analysisForm.scss
+++ b/src/styles/codeQuality/analysisForm.scss
@@ -12,27 +12,41 @@
   padding: 1.5rem;
   border-radius: 0.8rem;
   font-size: var(--font-size-small);
-  white-space: pre-wrap;
-  word-wrap: break-word;
   overflow-x: hidden;
   border: 0.1rem solid #ddd;
+}
 
+
+#root .code-display{
   h1 {
-    display: block;
-    font-size: 1em;
-    margin-block-start: 0.67em;
-    margin-block-end: 0em;
-    font-weight: bold;
-    unicode-bidi: isolate;
-}
+    font-size: 1.6em;
+    margin-block-end: 0.5em;
+    text-align: center;
+  } 
 
-p {
-  display: block;
-  margin-block-start: 0em;
-  margin-block-end: 0em;
-  unicode-bidi: isolate;
-}
+  p {
+    margin-block-start: 0em;
+    margin-block-end: 0.5em;
+  }
 
+  h2 {
+    font-size: 1.4em;
+    margin-block-start: 0em;
+    margin-block-end: 0.5em;
+  }
+
+  ul {
+    list-style-type: disc;
+    margin: 0 0 1.25em 0;
+    padding: 0;
+    padding-left: 1.625em;
+  }
+
+  li {
+    padding-left: .375em;
+    margin-bottom: .5em;
+    margin-top: .5em;
+  }
 }
 
 .bottomA {
